# tmp

./: .black  .flake8  .isort.cfg  .pre-commit-config.yaml  pyproject.toml
Python Basic/декораторы/: lesson1.py  lesson2.py
Python Basic/декораторы/tasks/: lesson1_1.py  lesson1_2.py  lesson1_3.py  lesson1_4.py
Python OOP/access_mode_2/: lesson2_decorator_property.py  lesson3_descriptors.py
Python OOP/access_mode_2/tasks/lesson1/: task1.py  task2.py  task4.py  task5.py  task6.py  task7.py
Python OOP/access_mode_2/tasks/lesson2/: lesson2_task1.py  lesson2_task2.py  lesson2_task3.py  lesson2_task4.py
Python OOP/access_mode_2/tasks/lesson3/: lesson3_task1.py  lesson3_task2.py  lesson3_task3.py  lesson3_task4.py  lesson3_task5.py
Python OOP/dunder_methods_3/: lesson1.py  lesson2.py
Python OOP/dunder_methods_3/tasks/lesson1/: lesson1_1.py  lesson1_2.py  lesson1_3.py  lesson1_4.py  lesson1_5.py  lesson1_6.py  lesson1_7.py  lesson1_8.py
Python OOP/dunder_methods_3/tasks/lesson2/: lesson2_1.py  lesson2_2.py  lesson2_3.py  lesson2_4.py  lesson2_5.py  lesson2_6.py  lesson2_7.py  lesson2_8.py  lesson2_9.py
